--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Google</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta name="author" content="Suriya">
+		<meta name="description" content="This page contains the google UI clone.">
 		<link rel="icon" type="image/png" href="favicon.ico">
 		<link rel="stylesheet" href="css/google-clone.css">
 	</head>
