--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
       </footer>
     </div>
 
-		<script src="js/js.js"></script>
+		<script src="js/google-clone.js"></script>
   </body>
 </html>
