--- a/index.html
+++ b/index.html
@@ -31,36 +31,35 @@
           height="92px"
           width="auto"
         />
-     	</div>
+      </div>
 
-			<form target="_self">
-				<div class="search-input-wrapper">
-					<div class="search icon">
-						<img src="svgs/search.svg" alt="search icon" />
-					</div>
-					<input type="text" name="search-term" class="google-search-input" />
-					<div class="mic icon">
-						<img src="svgs/mic.svg" alt="voice search button image" />
-					</div>
-				</div>
+      <form>
+        <div class="search-input-wrapper">
+          <div class="search icon">
+            <img src="svgs/search.svg" alt="search icon" />
+          </div>
+          <input type="text" name="search-term" class="google-search-input" />
+          <div class="mic icon">
+            <img src="svgs/mic.svg" alt="voice search button image" />
+          </div>
+        </div>
 
-				<div class="buttons-wrapper">
-					<input
-						class="search-button button"
-						type="submit"
-						onclick="searchResults()"
-						value="Google Search"
-					/>
-					<button class="lucky-button button"><a href="https://www.google.com/doodles">I'm Feeling Lucky</a></button>
-				</div>
-			</form>
+        <div class="buttons-wrapper">
+          <a class="search-button button" onclick="searchResults()">
+            Google Search
+          </a>
+          <button class="lucky-button button">
+            <a href="https://www.google.com/doodles">I'm Feeling Lucky</a>
+          </button>
+        </div>
+      </form>
 
       <div class="languages-wrapper">
         Google offered in: <span class="language">हिन्दी</span>
         <span class="language">বাংলা</span>
         <span class="language">తెలుగు</span>
         <span class="language">मराठी</span>
-				<span class="language">தமிழ்</span>
+        <span class="language">தமிழ்</span>
         <span class="language">ગુજરાતી</span>
         <span class="language">ಕನ್ನಡ</span>
         <span class="language">മലയാളം</span>
@@ -88,6 +87,6 @@
       </footer>
     </div>
 
-		<script src="js/google-clone.js"></script>
+    <script src="js/google-clone.js"></script>
   </body>
 </html>
